internal/portal/src/scenes/CreateDestination/CreateDestination.scss
.create-destination {
  display: grid;
  grid-template-columns: 272px 1fr;
  width: 100%;
  gap: 132px;
  margin: 0 auto;
  flex-direction: row;
  padding-top: calc(var(--base-grid-multiplier) * 18);
  height: calc(100vh - calc(var(--base-grid-multiplier) * 18));

  &__sidebar {
    display: flex;
    flex-direction: column;

    &__steps {
      margin-top: var(--spacing-8);
      margin-left: var(--spacing-2);
      display: flex;
      flex-direction: column;
      gap: var(--spacing-4);
      position: relative;
      &::before {
        content: "";
        z-index: 0;
        position: absolute;
        top: 1px;
        left: calc(var(--spacing-1) + 11.5px);
        bottom: 1px;
        border-left: 1px dashed var(--colors-outline-neutral);
      }

      &__step {
        z-index: 1;
        display: flex;
        align-items: center;
        gap: var(--spacing-3);
        text-decoration: none;
        font-weight: 500;
        font-size: var(--font-size-m);
        line-height: var(--line-height-m);
        color: var(--colors-foreground-neutral-3);
        background: none;
        border: none;
        cursor: pointer;

        &.active {
          color: var(--colors-foreground-primary);
        }

        &:disabled {
          cursor: not-allowed;
        }
      }
    }
  }

  &__step {
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    padding-bottom: var(--spacing-16);
    box-sizing: border-box;

    &__header {
      padding-left: 4px;
      padding-right: 4px;

      h1 {
        margin-top: 64px;
        margin-bottom: 0;
        ~ p {
          margin-top: 0;
        }
      }
    }

    form {
      display: flex;
      flex-direction: column;
      flex: 1;
      min-height: 0;

      > div {
        padding: 4px;
      }
    }

    &__fields {
      flex: 1 1 auto;
      min-height: 0;
      overflow-y: auto;
    }

    &__actions {
      margin-top: var(--spacing-8);
      display: flex;
      justify-content: flex-end;
      flex-shrink: 0;
    }
  }
}

.destination-types {
  border: 1px solid var(--colors-outline-neutral);
  border-radius: var(--radius-m);
  overflow: hidden;
  height: 100%;

  &__container {
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    height: 100%;
  }
}

.destination-type-option {
  cursor: pointer;
  position: relative;
  border-bottom: 1px solid var(--colors-outline-neutral);

  &:last-child {
    border-bottom: none;
  }

  &:has(input[type="radio"]:checked) {
    background-color: var(--colors-background-hover);
  }

  &:hover {
    background-color: var(--colors-background-hover);
  }

  input[type="radio"] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
  }

  .destination-type-content {
    padding: var(--spacing-4);

    &__icon {
      display: flex;
      align-items: center;
      svg {
        display: inline-block;
        width: 20px;
        height: 20px;
      }
    }

    h3 {
      display: flex;
      align-items: center;
      gap: var(--spacing-2);
      margin: 0;
      margin-bottom: var(--spacing-1);
    }

    p {
      margin: 0;
    }
  }
}

.filter-section {
  margin-top: var(--spacing-4);
  border-top: 1px solid var(--colors-outline-neutral);

  &__toggle-container {
    margin-top: var(--spacing-6);
    display: flex;
    align-items: center;
    justify-content: space-between;

    p {
      margin: 0;
    }
  }

  &__toggle {
    display: flex;
    align-items: center;
    gap: var(--spacing-2);
    background: none;
    border: none;
    cursor: pointer;
    color: var(--colors-foreground-neutral-2);

    &:hover {
      color: var(--colors-foreground-neutral);
    }

    svg {
      fill: var(--colors-foreground-neutral-2);
    }
  }

  &__label {
    font-weight: 500;
    color: currentColor;
    line-height: var(--line-height-m);
  }

  &__content {
    margin-top: var(--spacing-1);

    > p {
      margin: 0 0 var(--spacing-3) 0;
    }
  }

  &__guide-button {
    margin-bottom: var(--spacing-4);
  }
}

